// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dependency-side-bar 1`] = `

<gui-dependency-sidebar-provider
  dependencies="GridItemData { simple-output },GridItemData { abbrev },GridItemData { @vltpkg/semver }"
  uninstalleddependencies
>
  <gui-grid-header classname="flex w-full">
    <span class="mr-2">
      Dependencies
    </span>
    <gui-number-flow
      start="3"
      end="3"
      format="[object Object]"
      motionconfig="[object Object]"
      classnames="[object Object]"
    >
    </gui-number-flow>
    <span class="text-muted-foreground font-mono text-sm tabular-nums">
      /
    </span>
    <gui-number-flow
      start="3"
      end="3"
      format="[object Object]"
      motionconfig="[object Object]"
      classnames="[object Object]"
    >
    </gui-number-flow>
    <div
      class="flex grow justify-end gap-2"
      style="opacity: 1; filter: blur(0px);"
    >
      <gui-filter-button>
      </gui-filter-button>
    </div>
  </gui-grid-header>
  <gui-filter-list>
  </gui-filter-list>
  <gui-filter-list-empty-state>
  </gui-filter-list-empty-state>
  <div class="flex flex-col gap-4">
    <gui-side-item
      item="GridItemData { @vltpkg/semver }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { abbrev }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { simple-output }"
      dependencies="true"
    >
    </gui-side-item>
  </div>
  <gui-dependency-empty-state>
  </gui-dependency-empty-state>
</gui-dependency-sidebar-provider>

`;

exports[`dependency-side-bar has both installed and uninstalled deps 1`] = `

<gui-dependency-sidebar-provider
  dependencies="GridItemData { simple-output },GridItemData { abbrev },GridItemData { @vltpkg/semver }"
  uninstalleddependencies="GridItemData { @ruyadorno/redact },GridItemData { ntl }"
>
  <gui-grid-header classname="flex w-full">
    <span class="mr-2">
      Dependencies
    </span>
    <gui-number-flow
      start="3"
      end="3"
      format="[object Object]"
      motionconfig="[object Object]"
      classnames="[object Object]"
    >
    </gui-number-flow>
    <span class="text-muted-foreground font-mono text-sm tabular-nums">
      /
    </span>
    <gui-number-flow
      start="3"
      end="3"
      format="[object Object]"
      motionconfig="[object Object]"
      classnames="[object Object]"
    >
    </gui-number-flow>
    <div
      class="flex grow justify-end gap-2"
      style="opacity: 1; filter: blur(0px);"
    >
      <gui-filter-button>
      </gui-filter-button>
    </div>
  </gui-grid-header>
  <gui-filter-list>
  </gui-filter-list>
  <gui-filter-list-empty-state>
  </gui-filter-list-empty-state>
  <div class="flex flex-col gap-4">
    <gui-side-item
      item="GridItemData { @vltpkg/semver }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { abbrev }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { simple-output }"
      dependencies="true"
    >
    </gui-side-item>
  </div>
  <gui-dependency-empty-state>
  </gui-dependency-empty-state>
  <div class="mt-8 flex flex-col gap-4">
    <gui-grid-header classname="h-fit">
      Uninstalled Dependencies
    </gui-grid-header>
    <gui-side-item
      item="GridItemData { @ruyadorno/redact }"
      dependencies="false"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { ntl }"
      dependencies="false"
    >
    </gui-side-item>
  </div>
</gui-dependency-sidebar-provider>

`;

exports[`dependency-side-bar has uninstalled deps only 1`] = `

<gui-dependency-sidebar-provider
  dependencies
  uninstalleddependencies="GridItemData { @vltpkg/semver },GridItemData { abbrev },GridItemData { simple-output }"
>
  <gui-grid-header classname="flex w-full">
    <span class="mr-2">
      Dependencies
    </span>
    <gui-number-flow
      start="0"
      end="3"
      format="[object Object]"
      motionconfig="[object Object]"
      classnames="[object Object]"
    >
    </gui-number-flow>
    <span class="text-muted-foreground font-mono text-sm tabular-nums">
      /
    </span>
    <gui-number-flow
      start="3"
      end="0"
      format="[object Object]"
      motionconfig="[object Object]"
      classnames="[object Object]"
    >
    </gui-number-flow>
  </gui-grid-header>
  <gui-filter-list>
  </gui-filter-list>
  <gui-filter-list-empty-state>
  </gui-filter-list-empty-state>
  <div class="flex flex-col gap-4">
    <gui-side-item
      item="GridItemData { @vltpkg/semver }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { abbrev }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { simple-output }"
      dependencies="true"
    >
    </gui-side-item>
  </div>
  <gui-dependency-empty-state>
  </gui-dependency-empty-state>
  <div class="mt-8 flex flex-col gap-4">
    <gui-grid-header classname="h-fit">
      Uninstalled Dependencies
    </gui-grid-header>
    <gui-side-item
      item="GridItemData { @vltpkg/semver }"
      dependencies="false"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { abbrev }"
      dependencies="false"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { simple-output }"
      dependencies="false"
    >
    </gui-side-item>
  </div>
</gui-dependency-sidebar-provider>

`;

exports[`dependency-side-bar no items 1`] = `

<gui-dependency-sidebar-provider
  dependencies
  uninstalleddependencies
>
  <gui-grid-header classname="flex w-full">
    <span class="mr-2">
      Dependencies
    </span>
    <gui-number-flow
      start="0"
      end="0"
      format="[object Object]"
      motionconfig="[object Object]"
      classnames="[object Object]"
    >
    </gui-number-flow>
    <span class="text-muted-foreground font-mono text-sm tabular-nums">
      /
    </span>
    <gui-number-flow
      start="0"
      end="0"
      format="[object Object]"
      motionconfig="[object Object]"
      classnames="[object Object]"
    >
    </gui-number-flow>
  </gui-grid-header>
  <gui-filter-list>
  </gui-filter-list>
  <gui-filter-list-empty-state>
  </gui-filter-list-empty-state>
  <div class="flex flex-col gap-4">
  </div>
  <gui-dependency-empty-state>
  </gui-dependency-empty-state>
</gui-dependency-sidebar-provider>

`;
